openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: gitrack
  labels:
    app: gitrack
  annotations:
    haproxy.router.openshift.io/timeout: 300s
spec:
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: gitrack
    weight: 100
